--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -24,21 +24,31 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
+.header nav {
+    padding: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
-    margin-left: 25px;
+    padding: 0 15px;
+}
+.header nav ul li a{
+    -webkit-transition: color .5s;
+    -moz-transition:    color .5s;
+    -ms-transition:     color .5s;
+    -o-transition:      color .5s;
+    transition:         color .5s;
+}
+
+.header nav ul li a:hover{
+    color: rgb(138, 146, 149);
 }
 
 a {
@@ -86,55 +96,23 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead, .benefit-brand , .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3  {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-lead img,  .benefit-brand img, .benefit-cost img{
     display: block;
-    margin: 10px auto;
+    margin: 0px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -143,47 +121,11 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -198,3 +140,49 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+/*From this size, menu and all content will change position/size to display slightly better */
+@media screen and (max-width: 1060px) {
+    header nav{
+      float: none !important;
+      padding: 0 !important;
+    }
+    .header nav ul li, .header h1 {
+        padding: 15px;
+        display: block;
+    }
+    .content {
+        width: 90%;
+        display: block;
+        margin: 20px auto;
+    }
+    .search-engine-optimization,  .online-reputation-management, .social-media-marketing{
+        height: 100%;
+    }
+    .benefits{
+        float: left;
+        width: 100%;
+        margin:20px auto;
+    }
+    .benefit-lead, .benefit-brand , .benefit-cost {
+        width: 33%;
+        float: left;
+        margin: 0;
+        padding: 5px 10px;
+    }
+  }
+  /*This code will resize images inside content and side module to look better on mobile devices*/
+  @media screen and (max-width: 750px) {
+    .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
+        width: 100%;
+        margin: 0px auto 20px;
+        max-height: none;
+    }
+    .benefit-lead, .benefit-brand , .benefit-cost {
+        width: 90%;
+        float: none;
+        margin: 40px auto;
+        padding: 5px 10px;
+        text-align: center;
+    }
+
+  }
